--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "chat",
-  "description":"Chat app with e2e test",
+  "name": "simpleTodo",
+  "description": "Simple-todo app with e2e test",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -11,7 +11,8 @@
     "assert": "^1.3.0",
     "chai": "^3.2.0",
     "chai-as-promised": "^5.1.0",
-    "express": "^4.13.3",
+    "express": "^4.14.0",
+    "mongoose": "^4.4.12",
     "socket.io": "^1.3.6",
     "webdriverio": "^3.2.1"
   }
